[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Production RAG pipeline with pluggable chunking, vector stores, and retrieval evaluation."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Nripanka Das"}]

dependencies = [
    "numpy>=1.24",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7"]
api = ["fastapi>=0.100", "uvicorn>=0.23"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "mypy>=1.0"]
all = ["rag-pipeline[faiss,api,dev]"]

[project.scripts]
ragpipe = "rag_pipeline.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
